--- a/public/styles/cities-show.css
+++ b/public/styles/cities-show.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root {
     /*  colors  */
         --white: #f1f1f1;
@@ -9,3 +15,118 @@
         --small-font: 'Open Sans', Sans-Serif;
 }
 
+header {
+    font-Family: var(--large-font);
+    font-Size: 20px;
+    padding: 15px;
+    padding-bottom: 50px;
+    background-image: url(/header/city-show.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-bottom: 200px;
+    color: var(--white);
+}
+
+main {
+    Font-Family: var(--small-font);
+    Font-Size: 15px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px;
+    padding-bottom: 200px;
+    background-color: var(--tan);
+}
+
+footer{
+    background-color: var(--green);
+    text-align: center;
+    padding: 20px;
+    color: var(--white)
+}
+
+.nav {
+    overflow: hidden;
+    width: 25px;  
+}
+
+.nav_list {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);    
+}
+
+.nav_link {
+    float: none;
+    color: var(--green);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    font-size: 14px;
+}
+
+.nav_link:hover {
+    background-color: lightgray;
+}
+
+.nav:hover .nav_list {
+    display: block;
+}
+
+.trail_title {
+    margin-bottom: 80px;
+    color: var(--green)
+}
+
+.trail_location {
+    font-size: 40px;
+}
+
+.trails {
+    text-align: center;
+}
+
+.trail_name{
+    background-color: var(--white);
+    text-align: center;
+    padding: 20px 250px;
+    margin: 15px;
+    font-size: 15px;
+    transition: transform .2s linear;
+}
+
+.trail_name:hover{
+    transform: scale(1.1);
+}
+
+.trail_name a {
+    text-decoration: none;
+    color: var(--green);
+}
+
+.name{
+    font-size: 25px;
+    font-weight: 900;
+}
+
+button{
+    text-decoration: none;
+    border: none;
+    background-color: var(--tan);
+    font-size: 20px;
+    color: var(--green)
+}
+
+button:hover{
+    color: var(--white);
+    cursor: pointer;
+}
+
+form{
+    margin-left: 600px;
+}
