--- a/public/styles/trails-show.css
+++ b/public/styles/trails-show.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root {
 /*  colors  */
     --white: #f1f1f1;
@@ -9,19 +15,79 @@
     --small-font: 'Open Sans', Sans-Serif;
 }
 
+header {
+    font-Family: var(--large-font);
+    font-Size: 20px;
+    padding: 15px;
+    padding-bottom: 50px;
+    background-image: url(/header/city-show.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-bottom: 200px;
+    color: var(--white);
+}
+
+main {
+    Font-Family: var(--small-font);
+    Font-Size: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    padding: 50px;
+    padding-bottom: 200px;
+    background-color: var(--tan);
+}
+
+footer{
+    background-color: var(--green);
+    text-align: center;
+    padding: 20px;
+    color: var(--white)
+}
+
+.nav {
+    overflow: hidden;
+    width: 25px;  
+}
+
+.nav_list {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);    
+}
+
+.nav_link {
+    float: none;
+    color: var(--green);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    font-size: 14px;
+}
+
+.nav_link:hover {
+    background-color: lightgray;
+}
+
+.nav:hover .nav_list {
+    display: block;
+}
+
 .trail_header{
-    width: 100px;
-    height: 100px;
     position: relative;
 }
 
 .trail_text{
-    width: 100%;
-    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
+    text-shadow: 0 0 11px black;
     color: var(--white);
+    padding: 10px;
 }
 
 .trail_img{
@@ -34,4 +100,13 @@
     background-repeat: no-repeat;
 }
 
+.trail_info {
+    text-align: center;
+}
+
+.icons{
+    float: right;
+    display: inline-flex;
+
+}
 
