--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -10,20 +10,21 @@
 </head>
 <body>
     <header>
-
+        <h3> Trail Legs </h3>
         <!-- navigation and app name -->
-        <section class="nav_name">
-            <h3> Trail Legs </h3>
+        <section class="nav">
             <i class="fa fa-bars"></i>
-            <nav>
-                <a href="/">Home</a>
-                <a href="/cities">Cities</a>
-                <a href="/cities/<%=trail.city._id%>"><%=trail.city.name%></a>
+            <nav class="nav_list">
+                <a href="/" class="nav_link">Home</a>
+                <a href="/cities" class="nav_link">Cities</a>
+                <a href="/cities/<%=trail.city._id%>" class="nav_link"><%=trail.city.name%></a>
             </nav>
         </section>
     </header>
-    <main>
 
+
+    <main>
+        <!-- trail -->
         <div class="trail_header">
             <div class="trail_text">
                     <h2><%=trail.name%></h2>
@@ -36,17 +37,18 @@
                     };
                 </style>
             </div>
-        <div>
-            <p><%=trail.description%></p>
+        <div class="trail_info">
+            <p class="description"><%=trail.description%></p>
             
 
-            
-            <!-- delete icon -->
-            <form action="/trails/<%=trail._id%>?_method=DELETE" method="POST">
-            <button><i class="fa fa-trash"></i></button>
-            </form>
-            <!-- edit icon -->
-            <a href="/trails/<%=trail._id%>/edit"><i class="fas fa-pen"></i></a>
+            <div class="icons">
+                <!-- delete icon -->
+                <form action="/trails/<%=trail._id%>?_method=DELETE" method="POST">
+                <button class="delete"><i class="fa fa-trash"></i></button>
+                </form>
+                <!-- edit icon -->
+                <a href="/trails/<%=trail._id%>/edit" class=""><i class="fas fa-pen"></i></a>
+            </div>
         </div>
 
     
