added icons to nav on each page

--- a/views/cities/show.ejs
+++ b/views/cities/show.ejs
@@ -16,8 +16,8 @@
         <section class="nav">
             <i class="fa fa-bars"></i>
             <nav class="nav_list">
-                <a href="/" class="nav_link">Home</a>
-                <a href="/cities" class="nav_link">Cities</a>
+                <a href="/" class="nav_link"><i class="fas fa-home"></i> Home</a>
+                <a href="/cities" class="nav_link"><i class="fas fa-globe-americas"></i> Cities</a>
             </nav>
         </section>
     </header>
