--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -15,9 +15,9 @@
         <section class="nav">
             <i class="fa fa-bars"></i>
             <nav class="nav_list">
-                <a href="/" class="nav_link">Home</a>
-                <a href="/cities" class="nav_link">Cities</a>
-                <a href="/cities/<%=trail.city._id%>" class="nav_link"><%=trail.city.name%></a>
+                <a href="/" class="nav_link"><i class="fas fa-home"></i> Home</a>
+                <a href="/cities" class="nav_link"><i class="fas fa-globe-americas"></i> Cities</a>
+                <a href="/cities/<%=trail.city._id%>" class="nav_link"><i class="fas fa-undo"></i> <%=trail.city.name%></a>
             </nav>
         </section>
     </header>
