--- a/views/cities/index.ejs
+++ b/views/cities/index.ejs
@@ -15,8 +15,8 @@
     <div class="nav">
         <i class="fa fa-bars"></i>
         <div class="nav_list">
-            <a href="/" class="nav_link">Home</a>
-            <a href="/cities" class="nav_link">Cities</a>
+            <a href="/" class="nav_link"><i class="fas fa-home"></i> Home</a>
+            <a href="/cities" class="nav_link"><i class="fas fa-globe-americas"></i> Cities</a>
         </div>
       </div>
   </header>
