--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -38,7 +38,9 @@
                 </style>
             </div>
         <div class="trail_info">
-            <p class="description"><%=trail.description%></p>
+            <p class="description"><%=trail.description%><br />
+            Created by <%=trail.user.username%>
+            </p>
             
 
             <div class="icons">
