--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -42,7 +42,7 @@
             Created by <%=trail.user.username%>
             </p>
             
-
+            <% if(currentUser === trail.user.toString()) {%>
             <div class="icons">
                 <!-- delete icon -->
                 <form action="/trails/<%=trail._id%>?_method=DELETE" method="POST">
@@ -51,6 +51,7 @@
                 <!-- edit icon -->
                 <a href="/trails/<%=trail._id%>/edit" class=""><i class="fas fa-pen"></i></a>
             </div>
+            <%}%>
         </div>
 
     
