--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -3,16 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="stylesheet" href="/styles/register.css">
     <title>Register</title>
 </head>
 <body>
-    <h1>Register!</h1>
+    <div id="main-container">
+        <section class="auth-sidebar">
+            <!-- <h1>Register!</h1> -->
+        </section>
+        <section class="content">
+            <a class="home" href="/"><i class="fas fa-home"></i></a>
+        <main>
+        <h1>Sign Up for Trail Legs</h1>
+        
+        <div class="form">
+        <form action="/register" method="POST">
+            <label for="username">Username</label>
+                <br />
+            <input class="input" type="text" name="username" required>
+                <br />
+            <label for="password">Password</label>
+                <br />
+            <input class="input" type="password" name="password" required>
+                <br />
+            <label for="email">Email</label>
+                <br />
+            <input class="input" type="email" name="email" required>
+                <br />
+            <button type="submit"><i class="fas fa-check"></i></button>
+        </form>
 
-    <form action="/register" method="POST">
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <input type="email" name="email" placeholder="Email" required>
-    <input type="submit" value="Register">
-    </form>
+        <p class="login">
+            <a class="login" href="/login">
+                Already a member? Sign In
+            </a>
+        </p>
+        
+        </div>
+        </main>
+        </section>
+    </div>
 </body>
 </html>
