--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -3,14 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="stylesheet" href="/styles/login.css">
     <title>Login</title>
 </head>
 <body>
-    <h1>Login</h1>
+    <div id="main-container">
+        <section class="auth-sidebar">
+            <!-- <h1>Login!</h1> -->
+        </section>
+
+        <section class="content">
+            <a class="home" href="/"><i class="fas fa-home"></i></a>
+        <main>
+
+    <h1>Sign In to Trail Legs</h1>
+
+    <div class="form">
     <form action="/login" method="POST">
-        <input type="email" name="email" placeholder="Email" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <input type="submit" value="Login">
+        <label for="username">Username</label>
+            <br />
+        <input class="input" type="username" name="username" required>
+            <br />
+        <label for="password">Password</label>
+            <br />
+        <input class="input" type="password" name="password" required>
+            <br />
+        <button type="submit"><i class="fas fa-check"></i></button>
     </form>
+
+    <p class="register">
+        <a class="register" href="/register">
+            Not a member? Sign Up Now
+        </a>
+    </p>
+
+    </div>
+    </main>
+    </section>
+    </div>
 </body>
 </html>
