--- a/public/styles/edit.css
+++ b/public/styles/edit.css
@@ -89,52 +89,74 @@ footer {
     text-align: center;
 }
 
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: var(--green);
+    margin: 30px;
+    padding: 30px 50px;
+    border-radius: 20px;
+    Font-Family: var(--small-font);
+    color: var(--tan);
+}
+
+select {
+    padding: 3px;
+    margin: 10px;
+    border: 2px solid var(--tan);
+    border-radius: 3px;
+    outline: none;
+    margin-bottom: 15px;
+    color: var(--green);
+}
+
+.input {
+    border: none;
+    margin: 10px;
+    padding: 5px;
+    outline: none;
+    border-bottom: 2px solid var(--tan);
+    background-color: rgba(0,0,0,0);
+    color: var(--tan);
+    font-size: 14px;
+}
+
 button {
     border: none;
     background-color: rgba(0,0,0,0);
     cursor: pointer;
     font-size: 30px;
-    color: var(--green);
-    padding: 10px;
+    color: var(--tan);
     transition: .3s;
+    padding: 10px;
+    outline: none;
 }
 
 button:hover {
-    color: var(--white);
+    transform: scale(1.3);
 }
 
 .fa-times {
-    font-size: 30px;
-    color: var(--green);
-    padding: 10px;
+    color: var(--tan);
     transition: .3s;
+    font-size: 30px;
+    padding: 10px;
 }
 
 .fa-times:hover {
-    color: var(--white);
-}
-
-input {
-    padding: 3px;
-    border: 2px solid var(--green);
-    border-radius: 3px;
-    outline: none;
-    margin-bottom: 15px;
+    transform: scale(1.3);
 }
 
 textarea {
     padding: 3px;
-    border: 2px solid var(--green);
+    border: 2px solid var(--tan);
     border-radius: 3px;
     outline: none;
     margin-bottom: 15px;
     resize: none;
-}
-
-select {
-    padding: 3px;
-    border: 2px solid var(--green);
-    border-radius: 3px;
-    outline: none;
-    margin-bottom: 15px;
-}
+    Font-Family: var(--small-font);
+    color: var(--green);
+} 
