--- a/views/trails/edit.ejs
+++ b/views/trails/edit.ejs
@@ -25,25 +25,37 @@
         <h2>Edit <%=trail.name%></h2>
 
         <section class="main_content">
+        <div class="form">
         <form action="/trails/<%= trail._id %>?_method=PUT" method="POST">
         <!-- dropdown menu of all cities -->
+        <label for="city">City</label>
+            <br />
         <select name="city">
             <option value="<%=trail.city._id%>"><%= trail.city.name %></option>
         </select>
             <br />
-        <input type="text" name="name" value="<%= trail.name %>">
+        <label for="name">Name</label>
             <br />
-        <input type="text" name="location" value="<%= trail.location %>">
+        <input class="input" type="text" name="name" size="30" value="<%= trail.name %>">
             <br />
-        <textarea name="description"cols="30" rows="10"><%=trail.description%></textarea>
+        <label for="location">Location</label>
             <br />
-        <input type="text" name="image" value="<%= trail.image %>">
+        <input class="input" type="text" name="location" size="30" value="<%= trail.location %>">
+            <br />
+        <label for="description">Description</label>
+            <br />
+        <textarea name="description"cols="30" rows="5"><%=trail.description%></textarea>
+            <br />
+        <label for="image">Image URL</label>
+            <br />
+        <input class="input" type="text" name="image" size="30" value="<%= trail.image %>">
             <br />
             <% if(currentUser === trail.user.toString()) {%>
             <button type="submit"><i class="fas fa-check"></i></button>
             <a href="/trails/<%= trail._id %>"><i class="fas fa-times"></i></a>
                 <%}%>
         </form>
+        </div>
         </section>
     </main>
     <footer>
