--- a/public/styles/cities-show.css
+++ b/public/styles/cities-show.css
@@ -10,6 +10,7 @@
         --tan: #e0e0db;
         --black: #1f1f1f;
         --green: #404943;
+        --light-green: #5c6860;
     /* font  */
         --large-font: 'Raleway', Sans-Serif;
         --small-font: 'Open Sans', Sans-Serif;
@@ -47,6 +48,7 @@ footer{
     color: var(--white)
 }
 
+/* navigation menu */
 .nav {
     overflow: hidden;
     width: 25px;
@@ -79,6 +81,84 @@ footer{
     display: block;
 }
 
+/* user auth navigation */
+.user_login {
+    float: right;
+    font-size: 15px;
+    margin-top: 170px;
+    margin-right: 45px;
+    font-weight: 900;
+}
+
+.user_logout {
+    float: right;
+    font-size: 15px;
+    margin-top: 25px;
+    margin-right: 40px;
+    font-weight: 900;
+}
+
+.user_nav {
+    float: right;
+    display: inline-flex;
+}
+
+.profile {
+    margin left: 400px;
+    transition: .3s;
+}
+
+.profile:hover {
+    color: var(--light-green);
+}
+
+.logout {
+    font-size: 15px;
+    margin-left: 10px;
+}
+
+.user_nav input:hover {
+    color: var(--light-green);
+    cursor: pointer;
+}
+
+.user_nav a {
+    text-decoration: none;
+    color: var(--white);
+}
+
+.logout input{
+    text-decoration: none;
+    background-color: #1D1E22;
+    border: none;
+    color: var(--white);
+    font-size: 15px;
+    transition: .3s;
+}
+
+.register {
+    margin-right: 15px;
+    transition: .3s;
+}
+
+.register:hover {
+    color: var(--light-green);
+}
+
+.login {
+    transition: .3s;
+}
+
+.login:hover {
+    color: var(--light-green);
+}
+
+.user a {
+    text-decoration: none;
+    color: var(--white);
+}
+
+/* trail main */
 .trail_title {
     margin-bottom: 80px;
     color: var(--green)
