--- a/views/cities/show.ejs
+++ b/views/cities/show.ejs
@@ -20,6 +20,24 @@
                 <a href="/cities" class="nav_link"><i class="fas fa-globe-americas"></i> Cities</a>
             </nav>
         </section>
+        <div class="user_login">
+            <% if (user) { %>
+                <div class="user_nav">
+                    <a href="/profile" class="profile">Profile</a>
+                    
+                    <form action="/logout?_method=DELETE" method="POST" class="logout">
+                        <input type="submit" value="Logout">
+                    </form>
+                </div>
+        </div>       
+                <% } else { %>
+                    <div class="user_logout">
+                        <div class="user">
+                            <a href="/register" class="register">Register</a>
+                            <a href="/login" class="login">Login</a>
+                        </div>
+                    </div>
+            <% } %>
     </header>
     <main>
         <!-- displays city, state -->
