--- a/public/styles/trails-show.css
+++ b/public/styles/trails-show.css
@@ -47,6 +47,11 @@ footer{
     color: var(--white)
 }
 
+a {
+    text-decoration: none;
+    color: var(--green);
+}
+
 .nav {
     overflow: hidden;
     width: 25px;
@@ -119,6 +124,7 @@ footer{
     font-family: var(--small-font)
 }
 
+/* main text */
 .trail_text{
     position: absolute;
     top: 0;
@@ -145,6 +151,51 @@ footer{
 .icons{
     float: right;
     display: inline-flex;
+}
+
+.description {
+    background-color: var(--white);
+    color: var(--green);
+    padding-top: 20px;
+}
+
+.text {
+    padding-bottom: 40px;
+    width: 700px;
+    padding-top: 15px;
 
 }
 
+.creator {
+    padding: 15px;
+    font-weight: 900;
+}
+
+.icons {
+    color: var(--green);
+    font-size: 15px;
+    padding: 10px;
+    transition: .3s;
+}
+
+button  {
+    text-decoration: none;
+    border: none;
+    font-size: 15px;
+    color: var(--green);
+    background-color: var(--tan);
+    transition: .3s;
+}
+
+button:hover {
+    color: var(--white);
+    cursor: pointer;
+}
+
+.icons a:hover {
+    color: var(--white);
+}
+
+.delete {
+    margin-right: 10px;
+}
