--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,15 +61,15 @@
         </section>
 
         <!-- about the app -->
-        <section class="about_container">
+        <p class="about_container">
         <div class="about">
             
         <h3>About Us</h4>
-        <article>
+        <article class="text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestiae aliquam deserunt tenetur sapiente odit voluptatem itaque aliquid placeat a harum esse sit laborum possimus consequuntur, dicta est at rem.
         </article>
         </div>
-        </section>
+        </p>
     </main>
     <footer>
         <p>Copyright</p>
