--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -55,7 +55,7 @@
                 <button class="delete"><i class="fa fa-trash"></i></button>
                 </form>
                 <!-- edit icon -->
-                <a href="/trails/<%=trail._id%>/edit" class=""><i class="fas fa-pen"></i></a>
+                <a href="/trails/<%=trail._id%>/edit" class="edit"><i class="fas fa-pen"></i></a>
             </div>
             <%}%>
         </div>
