--- a/views/cities/index.ejs
+++ b/views/cities/index.ejs
@@ -55,7 +55,9 @@
     <!-- second loop to add images -->
   </main>
   <footer>
-      <p>Copyright</p>
-  </footer>
+    <p class="social"><a href="#"><i class="fab fa-instagram"></i></a>  <a href=""><i class="fab fa-facebook-f"></i></a> <a href=""><i class="fab fa-twitter"></i></a>
+    </p>
+    <p class="copyright">Copyright</p>
+</footer>
 </body>
 </html>
