--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -47,6 +47,8 @@ footer{
     text-align: center;
     padding: 20px;
     color: var(--white);
+    position: absolute;
+    width: 100%;
 }
 
 /* header styling */
@@ -229,10 +231,53 @@ footer{
     width: 100%;
 }
 
+.about-us{
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+
 .text{
     width: 500px;
 }
 
 .about_container {
     background-color: var(--white);
+}
+
+p.social {
+    float: right;
+    font-size: 20px;
+}
+
+.copyright {
+    margin-top: 8px;
+    margin-left: 60px;
+}
+
+.social {
+    margin: 5px;
+    position: relative;
+}
+
+.fa-instagram {
+    margin-right: 10px;
+    transition: .3s;
+}
+
+.fa-facebook-f {
+    margin-right: 10px;
+    transition: .3s;
+}
+
+.fa-twitter{
+    transition: .3s;
+}
+
+a {
+    text-decoration: none;
+    color: var(--white);
+}
+
+a i:hover{
+    color: var(--light-green)
 }
