--- a/public/styles/trails-show.css
+++ b/public/styles/trails-show.css
@@ -199,3 +199,60 @@ button:hover {
 .delete {
     margin-right: 10px;
 }
+
+/* footer */
+p.social {
+    float: right;
+    font-size: 20px;
+}
+
+.copyright {
+    margin-top: 8px;
+    margin-left: 60px;
+}
+
+.social {
+    margin: 5px;
+    position: relative;
+}
+
+.fa-instagram {
+    margin-right: 10px;
+    transition: .3s;
+}
+
+.fa-facebook-f {
+    margin-right: 10px;
+    transition: .3s;
+}
+
+.fa-twitter{
+    transition: .3s;
+}
+
+i.fa-instagram {
+    text-decoration: none;
+    color: var(--white);
+}
+
+i.fa-facebook-f {
+    text-decoration: none;
+    color: var(--white);
+}
+
+i.fa-twitter {
+    text-decoration: none;
+    color: var(--white);
+}
+
+i.fa-instagram:hover {
+    color: var(--light-green);
+}
+
+i.fa-facebook-f:hover {
+    color: var(--light-green);
+}
+
+i.fa-twitter:hover {
+    color: var(--light-green);
+}
