--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -32,7 +32,11 @@
         </section>
     </main>
     <footer>
-        <p>Copyright</p>
+        
+        <p class="social"><a href="#"><i class="fab fa-instagram"></i></a>  <a href=""><i class="fab fa-facebook-f"></i></a> <a href=""><i class="fab fa-twitter"></i></a>
+    
+        </p>
+        <p class="copyright">Copyright</p>
     </footer>
 </body>
 </html>
