--- a/views/cities/show.ejs
+++ b/views/cities/show.ejs
@@ -49,7 +49,7 @@
         </div>
         <section>
             <% city.trails.forEach(trail => { %> 
-                <a href="/trails/<%= trail._id %>"></a><div class="trail_name"><p class="name"><%= trail.name %></p><p class="location"><%=trail.location%></p></div></a>
+                <a href="/trails/<%= trail._id %>"><div class="trail_name"><p class="name"><%= trail.name %></p><p class="location"><%=trail.location%></p></div></a>
                 <% }); %>
             <% if(city.trails.length === 0){ %>
                 <p>No trails have been added.</p>
@@ -67,7 +67,11 @@
         
     </main>
     <footer>
-        <p>Copyright</p>
+        
+        <p class="social"><a href="#"><i class="fab fa-instagram"></i></a>  <a href=""><i class="fab fa-facebook-f"></i></a> <a href=""><i class="fab fa-twitter"></i></a>
+    
+        </p>
+        <p class="copyright">Copyright</p>
     </footer>
 </body>
 </html>
