--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@
         <p class="about_container">
         <div class="about">
             
-        <h3>About Us</h4>
+        <h4 class="about-us">About Us</h4>
         <article class="text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestiae aliquam deserunt tenetur sapiente odit voluptatem itaque aliquid placeat a harum esse sit laborum possimus consequuntur, dicta est at rem.
         </article>
@@ -72,7 +72,12 @@
         </p>
     </main>
     <footer>
-        <p>Copyright</p>
+        
+        <p class="social"><a href="#"><i class="fab fa-instagram"></i></a>  <a href=""><i class="fab fa-facebook-f"></i></a> <a href=""><i class="fab fa-twitter"></i></a>
+
+        </p>
+        <p class="copyright">Copyright</p>
     </footer>
+
 </body>
 </html>
