--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -63,7 +63,10 @@
     
     </main>
     <footer>
-        <p>Copyright</p>
+        <p class="social"><a href="#"><i class="fab fa-instagram"></i></a>  <a href=""><i class="fab fa-facebook-f"></i></a> <a href=""><i class="fab fa-twitter"></i></a>
+
+        </p>
+        <p class="copyright">Copyright</p>
     </footer>
 </body>
 </html>
