--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -22,9 +22,23 @@
     overflow: hidden;
 }
 
+body {
+    background-color: #EBE0C8;
+}
+
+footer{
+    background-color: var(--green);
+    text-align: center;
+    padding: 20px;
+    color: var(--white);
+    position: absolute;
+    width: 100%;
+}
+
 .auth-sidebar {
     background-image: url(/reglogin/login.jpg);
-    background-size: cover;
+    background-size: 720px 800px;
+    background-position: fixed;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
@@ -40,6 +54,7 @@
     background-color: var(--green);
     justify-content: center;
     width: 50%;
+    margin-bottom: 10px
 }
 
 main {
