--- a/views/cities/index.ejs
+++ b/views/cities/index.ejs
@@ -55,9 +55,10 @@
     <!-- second loop to add images -->
   </main>
   <footer>
-    <p class="social"><a href="#"><i class="fab fa-instagram"></i></a>  <a href=""><i class="fab fa-facebook-f"></i></a> <a href=""><i class="fab fa-twitter"></i></a>
+    <p class="social">
+      <p class="copyright">Copyright</p>
+      <p class="social_icons"><a href="#"><i class="fab fa-instagram"></i></a>  <a href=""><i class="fab fa-facebook-f"></i></a> <a href=""><i class="fab fa-twitter"></i></a></p>
     </p>
-    <p class="copyright">Copyright</p>
 </footer>
 </body>
 </html>
