--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -15,15 +15,25 @@
         --small-font: 'Open Sans', Sans-Serif;
 }
 
-#main-container {
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    overflow: hidden;
+label {
+    color: var(--green);
+    opacity: 1;
+}
+
+button {
+    border: none;
+    background-color: rgba(0,0,0,0);
+    cursor: pointer;
+    font-size: 30px;
+    color: var(--green);
+    transition: .3s;
+    padding: 2px;
+    outline: none;
 }
 
 body {
     background-color: #EBE0C8;
+    height: 100vh;
 }
 
 footer{
@@ -33,6 +43,21 @@ footer{
     color: var(--white);
     position: absolute;
     width: 100%;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+#main-container {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
 }
 
 .auth-sidebar {
@@ -54,15 +79,7 @@ footer{
     background-color: var(--green);
     justify-content: center;
     width: 50%;
-    margin-bottom: 10px
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    margin-bottom: 10px;
 }
 
 .form {
@@ -90,22 +107,6 @@ main {
     font-size: 14px;
 }
 
-label {
-    color: var(--green);
-    opacity: 1;
-}
-
-button {
-    border: none;
-    background-color: rgba(0,0,0,0);
-    cursor: pointer;
-    font-size: 30px;
-    color: var(--green);
-    transition: .3s;
-    padding: 2px;
-    outline: none;
-}
-
 button:hover {
     transform: scale(1.3);
 }
@@ -130,42 +131,4 @@ a:link, a:visited, .home:visited {
 
 .register:hover {
     text-decoration: underline;
-}
-
-p.social {
-    float: right;
-    font-size: 20px;
-}
-
-.copyright {
-    margin-top: 8px;
-    margin-left: 60px;
-}
-
-.social {
-    margin: 5px;
-    position: relative;
-}
-
-.fa-instagram {
-    margin-right: 10px;
-    transition: .3s;
-}
-
-.fa-facebook-f {
-    margin-right: 10px;
-    transition: .3s;
-}
-
-.fa-twitter{
-    transition: .3s;
-}
-
-a {
-    text-decoration: none;
-    color: var(--white);
-}
-
-a i:hover{
-    color: var(--light-green)
 }
