--- a/public/styles/cities-index.css
+++ b/public/styles/cities-index.css
@@ -180,11 +180,15 @@ footer{
     position: static;
 }
 
+.cities_list a:hover {
+    transform: scale(1.1);
+}
+
 .cities_list a{
     text-decoration: none;
     color: var(--white);
     font-weight: 900;
-    box-shadow: -2px -2px 14px #1f1f1f;
+    transition: .3s;
 }
 
 .cities_square {
@@ -203,6 +207,7 @@ footer{
 .social {
     font-size: 20px;
     margin: 5px;
+    text-align: center;
 }
 
 .copyright {
@@ -213,7 +218,6 @@ footer{
 .social_icons {
     text-align: right;
     font-size: 20px;
-
 }
 
 .fa-instagram {
