--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -56,7 +56,7 @@
             <select name="difficulty" required>
                 <option value="easy">Easy</option>
                 <option value="moderate">Moderate</option>
-                <option value="hard">Hard</option>
+                <option value="difficult"></option>
             </select>
                 <br />
             <label for="description">Description</label>
