--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -46,7 +46,7 @@
             <div class="description">
             <h2 class="title">Description:</h2>
             <p class="text"><%=trail.description%> </p>
-            <p class="creator">Created by <a href="/profile"><%=trail.user.username%></a></p>
+            <p class="creator">Created by <%=trail.user.username%></p>
             </div>
             <% if(currentUser === trail.user._id.toString()) {%>
             <div class="icons">
