--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -13,8 +13,9 @@
         <section class="auth-sidebar">
             <!-- <h1>Register!</h1> -->
         </section>
+            
         <section class="content">
-            <a class="home" href="/"><i class="fas fa-home"></i></a>
+            <p><a class="home" href="/"><i class="fas fa-home"></i></a></p>
             <main>
             <h1>Sign Up for Trail Legs</h1>
             
