--- a/public/styles/trails-show.css
+++ b/public/styles/trails-show.css
@@ -116,7 +116,8 @@ a {
 
 .logout input{
     text-decoration: none;
-    background-color: #1D1E22;
+    font-family: var(--large-font);
+    background-color: rgba(0,0,0,0);
     border: none;
     color: var(--white);
     font-size: 14px;
@@ -173,7 +174,7 @@ a {
 
 .icons {
     color: var(--green);
-    font-size: 15px;
+    font-size: 20px;
     padding: 10px;
     transition: .3s;
 }
@@ -181,7 +182,7 @@ a {
 button  {
     text-decoration: none;
     border: none;
-    font-size: 15px;
+    font-size: 20px;
     color: var(--green);
     background-color: var(--tan);
     transition: .3s;
