--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400" rel="stylesheet">
     <link rel="stylesheet" href="/styles/trails-show.css">
-    <title>View Trail</title>
+    <title>View <%=trail.name%></title>
 </head>
 <body>
     <header>
