adds logout to profile and resolves and hover transitions

--- a/public/styles/cities-show.css
+++ b/public/styles/cities-show.css
@@ -204,7 +204,8 @@ button{
     border: none;
     background-color: var(--tan);
     font-size: 20px;
-    color: var(--green)
+    color: var(--green);
+    transition: .3s;
 }
 
 button:hover{
