--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,9 @@
             
         <h4 class="about-us">About Us</h4>
         <article class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestiae aliquam deserunt tenetur sapiente odit voluptatem itaque aliquid placeat a harum esse sit laborum possimus consequuntur, dicta est at rem.
+            Trail Legs has built an easy to use database for users to store their favorite trails. Starting with eight major cities Trail Legs helps users store and explore a collection of trails in each city. <br>
+            <br>
+            Trail Legs was founded by Christian Hutto and Alicia Roeck from their shared love of hiking. What if you could have all of your favorite trails in one place? Trail Legs was built to help friends, loved ones, and outdoor enthusiasts share their favorite trails.
         </article>
         </div>
         </p>
