adds username to register error page.

--- a/views/auth/register-new.ejs
+++ b/views/auth/register-new.ejs
@@ -20,7 +20,7 @@
                 <h1>Sign Up for Trail Legs</h1>
                 <div>
                     <p class="error"><i class="fas fa-times"></i>
-                    Another account is using the email entered.
+                    Another account is using the email or username entered.
                     </p>
                 </div>
                 <div class="form">
